wrapping up the create-post page, fixed a lot of visual errors

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -503,107 +503,146 @@ footer p:last-child {
   margin-left: auto;
 }
 
-.tag:hover {
+.tag:hover, .post:hover {
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 /* END OF FILTER TAGS */
 
-.outer-post {
+/* CREATE POST */
+
+.post-container {
   background-color: white;
   border: none;
   margin-left: auto;
   margin-right: auto;
   width: 1000px;
-  height: 70px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   border-radius: 10px;
+  padding: 16px;
 }
 
-.outer-post input[type=text]{
+.post-container input[type=text]{
   border: 1.5px solid #DADADADA;
   font-size: 15px;
   border-radius: 10px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 10px;
   display: flex;
   align-items: center;
-  width: 1000px;
+  width: 100%;
   height: 45px;
 }
 
-.inner-post span{
+.title-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.account-icon {
+  margin-bottom: 1px;
+}
+
+.account-icon span{
   font-size: 40px;
   text-align: center;
   color:#3F3F3F;
 }
 
+.title-box {
+  flex: 1;
+  margin-left: 10px;
+}
+
+.title-box input[type="text"] {
+  padding-left: 16px;
+}
+
+.text-box {
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1.5px solid #DADADA;
+  border-radius: 10px;
+  padding-bottom: 120px;
+}
+
+.text-box p {
+  margin: 0;
+}
+
+.post-tags {
+  display: flex;
+  align-items: center;
+}
+
+.post-tags h4 {
+  margin-right: 16px;
+}
+
+.post-tags .post {
+  color: white;
+  background-color: #878787;
+  border: none;
+  border-radius: 48px;
+  padding: 8px 16px;
+  margin-left: auto;
+  margin-right: 8px;
+}
+
+/* CREATE POST END */
+
+/* POSTED  */
+
 .posted{
   background-color: white;
   border: none;
-  margin-top: 50px;
+  margin: 24px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
+  flex-direction: column;
   border-radius: 10px;
   width: 1000px;
-  height: 250px;
+  padding: 16px;
 }
 
-.div.topic{
-  background-color: white;
+/* section 1 container */
+.post-header{
   width: 100%;
-  height: 90px;
-  white-space: nowrap;
-  overflow-x: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 16px;
+  height: 32px;
 }
 
-.div.topic > span, h4, button{
-  display: inline-block;
+.account {
+  display: flex;
+  align-items: center;
 }
 
-.tips2{
-  background-color: #597B49;
-  border-radius: 5px;
-  border: none;
-  position: absolute;
-  left: 69%;
-  padding: 5px;
-  margin-top: 20px;
-  color: white;
-}
-
-.sustainbility2{
-  background-color: #699FE0;
-  border-radius: 5px;
-  border: none;
-  position: absolute;
-  left: 76%;
-  padding: 5px;
-  margin-top: 20px;
-}
-
-.topic span{
-  font-size: 30px;
-  text-align: center;
+/* account icon */
+.post-header span{
+  font-size: 32px;
   color:#3F3F3F;
-  margin-top: 20px;
-  position: absolute;
-  left: 18%
+  margin-right: 4px;
 }
 
-.topic h4{
-  font-size: 10px;
-  text-align: center;
-  margin-top: 29px;
-  position: absolute;
-  left:20%
+.right-tags .tag{
+  margin-right: 0;
+  margin-left: 16px;
 }
 
-.topic h5, p{
-    font-size: 13px;
-    top: 15%;
-    position: relative;
-    margin-left: 10px;
+.posted h2 {
+  margin: 0px;
 }
+
+.posted-text {
+  max-height: 180px;
+  overflow: hidden;
+  margin-bottom: 16px;
+}
+
+/* POSTED DONE */
